--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,51 +1,26 @@
 {% extends "layout.html" %}
-{% block title %}Subir - Historias de Negocios - Puerto Rico{% endblock %}
+{% block title %}Sobre - Historias de Negocios - Puerto Rico{% endblock %}
 {% block head %}
 	{{ super() }}
 	<!-- any local css/styling should be put here -->
 {% endblock %}
 {% block content %}
-
-<!--<div class="container">
-  <div class="row">
-  	<div class="col-md-8 col-md-offset-2">
-			<h1>Sobre Historias de negocios</h1>
-			<h3>Los pequeños negocios están en riesgo en Puerto Rico. Historias de Negocios cree que es un buen momento para que los pequeños empresarios aparezcan y cuenten sus historias y desafíos y barreras que encuentran para crecer.
-			</h3>
-			<br/>
-			<p align="">
-				<h3>Creemos que el compartir la historia de tu negocio y tus desafios con tus pares va ayudarte a navegar tus dilemas y problemas. As it relates to challenges, sharing your dilemma with positive people who are non-competitive, don't work for you and share similar goals is a fantastic starting point. 
-				We've launched the QB Self-Employed community to make finding peers who you respect, admire and can help you. We are stronger together, baby. A much faster way to master the specifics of a challenging situation is for a community of peers to share what *they* did to navigate their own dilemmas. Stories trump advice. Every. Time.   </h3> 
-				<br/>
-			</p>
-			<br/>
-			<p align="center">
-				<div class="button-wrapper">
-          <a class="btn" href="/subir"><span>SUBE TU HISTORIA</span></a>
-        </div>
-			</p> 
-			<br/>
-  	</div>
-  </div>
-</div>-->
-
-
-  <div class="container">
-  <div class="row">
-  <div class="col-lg-4">
-   <h2>Meet Owners Like You</h2>
-     <p>Plug into a rich network of smart, small business owners just like you.</p>
-     </div>
-   <div class="row">
-  <div class="col-lg-4">
-   	<h2>Learn With Your Peers</h2>
-      <p>Get and give support with people pursuing the same goals or dealing with same challenges.</p>
+    
+    <img src="{{ url_for('static', filename='img/imagendeclara.png') }}">
+    <div class="row">
+      <div class="col-lg-4">
+        <h2>Meet Owners Like You</h2>
+        <p>Plug into a rich network of smart, small business owners just like you.</p>
+      </div>
+      <div class="col-lg-4">
+       	<h2>Learn With Your Peers</h2>
+        <p>Get and give support with people pursuing the same goals or dealing with same challenges.</p>
+      </div>
+      <div class="col-lg-4">
+       	<h2>Promote your endeavor</h2>
+        <p>Build professional connections and uncover effective business strategies.</p>
+      </div>
     </div>
-  <div class="row">
-  <div class="col-lg-4">
-   	<h2>Promote your endeavor</h2>
-      <p>Build professional connections and uncover effective business strategies.</p>
-   </div>
-</div>
+  &nbsp;&nbsp;&nbsp;&nbsp;
 
 {% endblock %}
