Changes to sobre page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -268,7 +268,8 @@ textarea {
     }
 
     img {
-        max-width: 100% !important;
+        max-width: 100%;
+        position: center;
     }
 
     @page {
