--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -6,7 +6,9 @@
 {% endblock %}
 {% block content %}
     
-    <img src="{{ url_for('static', filename='img/imagendeclara.png') }}">
+    <div class="row"> 
+    <div class="col-lg-12">    
+    <img class="sobre-image" src="{{ url_for('static', filename='img/smallbiz.jpg') }}"></div></div>
     <div class="row">
       <div class="col-lg-4">
         <h2>Meet Owners Like You</h2>
