--- a/templates/explora.html
+++ b/templates/explora.html
@@ -6,30 +6,36 @@
 {% endblock %}
 {% block content %}
   {% for town, town_entries in entries.iteritems() %}
-    <div class="videos-content">
-      <div class="video-header">
-          <span class="town-name">{{ town }}</span>
+    <div class="videos-content container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h3 class="video-header">
+            <span class="town-name">{{ town }}</span>
+          </h3>
+        </div>
       </div>
-      <div class="video-container">
+      <div class="video-container row">
         {% for video in town_entries %}
-          <div class="item">
+          <div class="item col-lg-4">
             {% if video.youtube_url %}
               <iframe width="300" height="150" src="//www.youtube.com/embed/{{ video.youtube_link }}" frameborder="0" allowfullscreen></iframe>
             {% else %}
               <img src="{{ video.picture_url }}" width="300" height"150" alt="{{ video.prof }}">
             {% endif %}
-            <div> <span class="video-name">{{ video.name }} </span></div>
-            <div> <span class="video-name">{{ video.industry }} </span></div>
-            <div> <span class="video-name">{{ video.pride_in }} </span></div>
-            <div> <span class="video-name">{{ video.desafio }} </span></div>
-            {% for meta in video.metas %}
-              {% if meta != "" %}
-                <div> <span class="video-name">Meta: {{ meta }} </span></div>
-              {% endif %}
-            {% endfor %}
-            <div> <span class="video-name">{{ video.twitter_url }} </span></div>
-            <div> <span class="video-name">{{ video.facebook_url }} </span></div>
-            <div> <span class="video-name">{{ video.website_url }} </span></div>
+            <h4> <span class="video-name">{{ video.name }} </span></h4>
+            <ul>
+              <li><span class="video-name">{{ video.industry }} </span></li>
+              <li><span class="video-name">{{ video.pride_in }} </span></li>
+              <li><span class="video-name">{{ video.desafio }} </span></li>
+              {% for meta in video.metas %}
+                {% if meta != "" %}
+                  <li><span class="video-name">Meta: {{ meta }} </span></li>
+                {% endif %}
+              {% endfor %}
+              <li> <span class="video-name">{{ video.twitter_url }} </span></li>
+              <li> <span class="video-name">{{ video.facebook_url }} </span></li>
+              <li> <span class="video-name">{{ video.website_url }} </span></li>
+            </ul>
           </div>
         {% endfor %}
       </div>
@@ -43,7 +49,7 @@
 
         orgullopr.init();
 
-        $('document').ready(function(){
+        /* $('document').ready(function(){
 
             var msnry = new Masonry($('.video-container')[0], {
                 itemSelector: '.item',
@@ -57,6 +63,7 @@
                 }
             });
         });
+      */
 
     </script>
 {% endblock %}
