--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,18 +42,19 @@
             </div>
         </header>
 		<div id="content"> {% block content %}{% endblock %} </div>
-		<footer>
+		<!--<footer>
             <ul class="footer-links">
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">Prensa</a></li>
             </ul>
-		</footer>
+		</footer>-->
         {% block scripts %}
             <script src="{{ url_for('static', filename='js/vendor/modernizr-2.6.2.min.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/jquery-1.11.0.min.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/masonry.pkgd.min.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/swfobject.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/jquery.ytchromeless.js') }}"></script>
+
             <script src="{{ url_for('static', filename='js/vendor/d3.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/klass.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/atlaspr.js') }}"></script>
