Changing information on explora page

--- a/templates/subir.html
+++ b/templates/subir.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 <form action="/add" method="POST" class="input-form" name="input-form">
-	<legend>Sube la historia de tu negocio: queremos compartir lo bueno, lo malo y lo malisimo</legend>
+	<legend>Sube la historia de tu negocio</legend>
 	<ul>
 		<li>
 			<label for="name">Tu nombre</label>
