--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -8,19 +8,20 @@
     
     <div class="row"> 
     <div class="col-lg-12">    
-    <img class="sobre-image" src="{{ url_for('static', filename='img/smallbiz.jpg') }}"></div></div>
+    <img class="sobre-image" src="{{ url_for('static', filename='img/smallbiz.jpg') }}"></div>
+  </div>
     <div class="row">
       <div class="col-lg-4">
-        <h2>Meet Owners Like You</h2>
-        <p>Plug into a rich network of smart, small business owners just like you.</p>
+        <h2>Conectate con pequeños empresarios como tu</h2>
+        <p>Comparte historias de éxito y desafíos y unete a una red de pequeños empresarios.</p>
       </div>
       <div class="col-lg-4">
-       	<h2>Learn With Your Peers</h2>
-        <p>Get and give support with people pursuing the same goals or dealing with same challenges.</p>
+       	<h2>Aprende de tus pares</h2>
+        <p>Recibe consejos y apoya a los empresarios que persiguen los mismos objetivos o se encuentran ante los mismos retos.</p>
       </div>
       <div class="col-lg-4">
-       	<h2>Promote your endeavor</h2>
-        <p>Build professional connections and uncover effective business strategies.</p>
+       	<h2>Promociona tu iniciativa</h2>
+        <p>Construye conexiones profesionales y descubre efectivas estrategias de negocios.</p>
       </div>
     </div>
   &nbsp;&nbsp;&nbsp;&nbsp;
