--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,8 +29,28 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <header>
-            <div class="nav-sun">
+        
+            <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Historias de Negocios</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                  <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Inicio</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#contact">Explora</a></li>
+                  </ul>
+                </div><!--/.nav-collapse -->
+              </div>
+            </div>
+            <!-- <div class="nav-sun">
                 <div class="header-title"><a href="/">Home</a></div>
                 <nav>
                     <ul class="nav-menu">
@@ -39,15 +59,15 @@
                         <li><a href="/sobre"><span class="menu-text">SOBRE</span></a></li>
                     </ul>
                 </nav>
-            </div>
-        </header>
-		<div id="content"> {% block content %}{% endblock %} </div>
-		<!--<footer>
+            </div> -->
+        
+		<div class="container" id="content"> {% block content %}{% endblock %} </div> 
+		<!-- <footer>
             <ul class="footer-links">
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">Prensa</a></li>
-            </ul>
-		</footer>-->
+            </ul> -->
+		</footer>
         {% block scripts %}
             <script src="{{ url_for('static', filename='js/vendor/modernizr-2.6.2.min.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/jquery-1.11.0.min.js') }}"></script>
