--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,13 +39,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">Historias de Negocios</a>
+                  <a class="navbar-brand" href="">Inicio</a>
                 </div>
                 <div class="collapse navbar-collapse">
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Inicio</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#contact">Explora</a></li>
+                    <li><a href="/subir">Sube tu Historia</a></li>
+                    <li><a href="/sobre">Sobre</a></li>
+                    <li><a href="/explora">Explora las Historias</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
               </div>
