--- a/templates/subir.html
+++ b/templates/subir.html
@@ -5,24 +5,117 @@
 	<!-- any local css/styling should be put here -->
 {% endblock %}
 {% block content %}
-<form action="/add" method="POST" class="input-form" name="input-form">
-	<legend>Sube la historia de tu negocio</legend>
-	<ul>
-		<li>
-			<label for="name">Tu nombre</label>
-			<input type="text" id="name" name="name" placeholder="Entre su nombre" required="true"/>
-		</li>
-		<li>
-			<label for="email">Tu email</label>
-			<input type="email" id="email" name="email" placeholder="Entre su email" required="true"/>
-		</li>
-		<li>
-			<label for="prof">El Nombre del negocio</label>
-			<input type="text" id="prof" name="prof" placeholder="Entra el nombre del negocio" required="true"/>
-		</li>
-		<li>
-			<label for="industry">La Industria del negocio</label>
-			<select id="industry" name="industry" required="true">
+<!--
+
+<form role="form">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Tu Nombre</label>
+    <input type="text" class="form-control" id="inputname" placeholder="Entra tu nombre">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Tu email</label>
+    <input type="email" class="form-control" id="inputemail" placeholder="Entra tu email">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">El nombre del negocio</label>
+    <input type="text" class="form-control" id="inputbusinessname" placeholder="Entra el nombre del negocio">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Breve historia del negocio</label>
+    <input type="text" class="form-control" id="exampleinputstory" placeholder="Breve historia del negocio">
+  </div>
+    <div><select class="form-control">
+    <label for="exampleInputPassword1">Municipio</label>
+	  <option>1</option>
+	  <option>2</option>
+	  <option>3</option>
+	  <option>4</option>
+	  <option>5</option>
+   </select></div>
+    <select class="form-control">
+    <label for="exampleInputPassword1">Desafíos</label>
+	  <option>1</option>
+	  <option>2</option>
+	  <option>3</option>
+	  <option>4</option>
+	  <option>5</option>
+   </select>
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Meta 1</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Meta 2</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Meta 3</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div>
+	<select class="form-control">
+	 <label for="exampleInputPassword1">Industria</label>
+	  <option>1</option>
+	  <option>2</option>
+	  <option>3</option>
+	  <option>4</option>
+	  <option>5</option>
+	</select>
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Facebook</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Twitter</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Website</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">Sube una foto</label>
+    <input type="file" id="exampleInputFile">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Enlace a video</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+-->
+<br/>
+<div class="container"><div class="row"><div class="col-md-4 col-md-offset-4"><div class="row">
+
+<form action="/add" method="POST" class="form-horizontal" role="form">
+  
+  <div class="form-group">
+  	<label for="name" class="col-sm-4 control-label">Tu nombre</label>
+  	<div class="col-sm-8">
+  		<input type="text" id="name" class="form-control" name="name" placeholder="Entre su nombre" required="true"/>
+  	</div>
+  </div>
+  
+  <div class="form-group">
+  	<label for="email" class="col-sm-4 control-label">Tu email</label>
+  	<div class="col-sm-8">
+  		<input type="email" class="form-control" name="email" placeholder="Entre su email" required="true"/>
+  	</div>
+  </div>
+
+  <div class="form-group">
+  	<label for="prof" class="col-sm-4 control-label">El Nombre del negocio</label>
+  	<div class="col-sm-8">
+			<input type="text" id="prof" class="form-control" name="prof" placeholder="Entra el nombre del negocio" required="true"/>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="industry">La Industria del negocio</label>
+		<div class="col-sm-8">
+			<select id="industry" name="industry" required="true" class="form-control">
 				<option value="">Selecciona uno...</option>
 				<option value="agriculture">Agriculture</option>
 				<option value="tourism">Tourism</option>
@@ -49,24 +142,36 @@
 				<option value="administrative_support">Administrative Support, Waste Management and Remediation Services</option>
 				<option value="other">other (please specify below)</option>
 			</select>
-		</li>
-		<li>
-			<label for="industry_other">La Industria del negocio (otro)</label>
-			<input type='text' name='industry_other'>
-		</li>
-		<li>
-			<label for="pride_in">Breve historia del negocio *</label>
-			<textarea name="pride_in" cols="50" rows="6" ></textarea>
-		</li>
-		<li>
-			<label for="town">Municipio del negocio *</label>
-			<select id="town" name="town" required="true">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for=" industry_other">La Industria del negocio (otro)</label>
+		<div class="col-sm-8">
+			<input type='text' name='industry_other' class="form-control">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="pride_in">Breve historia del negocio *</label>
+		<div class="col-sm-8">
+			<textarea name="pride_in" cols="50" rows="6" class="form-control"></textarea>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="town">Municipio del negocio</label>
+		<div class="col-sm-8">
+			<select id="town" name="town" required="true" class="form-control">
 				<option value="">Selecciona uno...</option>
 				{% for town in towns %}
 				<option value="{{ town.name }}">{{ town.name }}</option>
 				{% endfor %}
 			</select>
-		</li>
+		</div>
+	</div>
+
+	<!--
 		<li>
 			<p>Tus metas</p>
 		</li>
@@ -82,9 +187,12 @@
 			<label for="metas">Meta 3</label>
 			<input type='text' name='metas[]'>
 		</li>
-		<li>
-			<label for="desafio">Tu principal desafío </label>
-			<select id="desafio" name="desafio" required="true">
+	-->
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="desafio">Tu principal desafío</label>
+		<div class="col-sm-8">
+			<select id="desafio" name="desafio" required="true" class="form-control">
 				<option value="">Selecciona uno...</option>
 				<option value="relocate_business">relocate a business</option>
 				<option value="hire_interns">hire interns</option>
@@ -99,31 +207,47 @@
 				<option value="brand_awareness">achieving brand awareness</option>
 				<option value="other">other</option>
 			</select>
-		</li>
-		<li>
-			<label for="name">Twitter</label>
-			<input type="text" id="name" name="twitter_url" placeholder="Entra la página de Twitter"/>
-		</li>
-		<li>
-			<label for="name">Facebook</label>
-			<input type="text" id="name" name="facebook_url" placeholder="Entra la página de facebook"/>
-		</li>
-		<li>
-			<label for="name">Website</label>
-			<input type="text" id="name" name="website_url" placeholder="Entra la página web"/>
-		</li>
-		<li>
-			<label for="youtube_url">Enlace a video</label>
-			<input id="youtube_url" name="youtube_url" type="text" placeholder="Entra el url de su video de Youtube" >
-		</li>
-		<li>
-			<label for="picture_url">Enlace a foto</label>
-			<input id="picture_url" name="picture_url" type="text" placeholder="Entra el url de su foto" required="true">
-		</li>
-		<li>
-			<button type="submit" class="submit">Enviar</button>
-		</li>
-	</ul>
-</fieldset>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="twitter_url">Twitter</label>
+		<div class="col-sm-8">
+			<input type="text" id="name" name="twitter_url" placeholder="Entra tu nombre de Twitter" class="form-control"/>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="facebook_url">Facebook</label>
+		<div class="col-sm-8">
+			<input type="text" id="name" name="facebook_url" placeholder="Entra la URL de su página de facebook" class="form-control"/>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="website_url">Website</label>
+		<div class="col-sm-8">
+			<input type="text" id="name" name="website_url" placeholder="Entra la URL de su página web" class="form-control"/>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="youtube_url">Enlace a video</label>
+		<div class="col-sm-8">
+			<input type="text" id="name" name="youtube_url" placeholder="Entra el URL de su video de Youtube" class="form-control"/>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-4 control-label" for="picture_url">Enlace a foto</label>
+		<div class="col-sm-8">
+			<input type="text" id="name" name="picture_url" placeholder="Entra el URL de su foto" class="form-control"/>
+		</div>
+	</div>
+	<div class="col-sm-8 col-sm-offset-4">
+		<button type="submit" class="submit">Enviar</button>
+	</div>
+		
 </form>
+</div></div></div></div>
 {% endblock %}	
