--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -6,11 +6,6 @@
 {% endblock %}
 {% block content %}
     
-    <div class="row"> 
-    <div class="col-lg-12">    
-    <img class="sobre-image" src="{{ url_for('static', filename='img/smallbiz.jpg') }}"></div>
-  </div>
-    <div class="row">
       <div class="col-lg-4">
         <h2>Conectate con pequeños empresarios como tu</h2>
         <p>Comparte historias de éxito y desafíos y unete a una red de pequeños empresarios.</p>
@@ -23,7 +18,10 @@
        	<h2>Promociona tu iniciativa</h2>
         <p>Construye conexiones profesionales y descubre efectivas estrategias de negocios.</p>
       </div>
-    </div>
-  &nbsp;&nbsp;&nbsp;&nbsp;
+     <div class="row"> 
+     <div class="col-lg-12">    
+     <img class="sobre-image" src="{{ url_for('static', filename='img/smallbiz.jpg') }}"></div>
+  </div>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 {% endblock %}
