--- a/templates/subir.html
+++ b/templates/subir.html
@@ -155,7 +155,7 @@
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="pride_in">Breve historia del negocio *</label>
 		<div class="col-sm-8">
-			<textarea name="pride_in" cols="50" rows="6" class="form-control"></textarea>
+			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="450"></textarea>
 		</div>
 	</div>
 
