Making map responsive

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -79,6 +79,8 @@
             <script src="{{ url_for('static', filename='js/vendor/klass.js') }}"></script>
             <script src="{{ url_for('static', filename='js/vendor/atlaspr.js') }}"></script>
 
+            <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
             <script src="{{ url_for('static', filename='js/plugins.js') }}"></script>
             <script src="{{ url_for('static', filename='js/app.js') }}"></script>
         {% endblock %}
