--- a/templates/explora.html
+++ b/templates/explora.html
@@ -27,8 +27,8 @@
             </div>
             <h4> <span class="video-name">{{ video.name }} </span></h4>
             <ul>
-              <li> <strong>Industry: </strong> <span class="video-name">{{ video.industry }} </span></li>
-              <li> <strong>Orgulloso de: </strong> <span class="video-name">{{ video.pride_in }} </span></li>
+              <li> <strong>Industria: </strong> <span class="video-name">{{ video.industry }} </span></li>
+              <li> <strong>Historia: </strong> <span class="video-name">{{ video.pride_in }} </span></li>
               <li> <strong>Desafio: </strong> <span class="video-name">{{ video.desafio }} </span></li>
               {% for meta in video.metas %}
                 {% if meta != "" %}
