--- a/templates/subir.html
+++ b/templates/subir.html
@@ -117,30 +117,30 @@
 		<div class="col-sm-8">
 			<select id="industry" name="industry" required="true" class="form-control">
 				<option value="">Selecciona uno...</option>
-				<option value="agriculture">Agriculture</option>
-				<option value="tourism">Tourism</option>
-				<option value="finance_insurance">Finance and Insurance</option>
-				<option value="accomodation">Accommodation</option>
-				<option value="food_drink">Food & Drink services</option>
-				<option value="art_entertainment">Art, entertainment</option>
-				<option value="construction">Construction</option>
-				<option value="pharmaceuticals">Pharmaceuticals</option>
-				<option value="biotechnology">Biotechnology</option>
-				<option value="wholesale_trade">Wholesale Trade</option>
-				<option value="health_care">Health care</option>
-				<option value="information_media_internet">Information / media / internet</option>
-				<option value="public_administration">Public administration</option>
-				<option value="real_estate">Real estate</option>
-				<option value="transportation">Transportation</option>
+				<option value="agriculture">Agricultura</option>
+				<option value="tourism">Turismo</option>
+				<option value="finance_insurance">Finanzas</option>
+				<option value="accomodation">Hospedaje</option>
+				<option value="food_drink">Comida & Bebida</option>
+				<option value="art_entertainment">Arte y entretenimiento</option>
+				<option value="construction">Construcción</option>
+				<option value="pharmaceuticals">Farmaceútica</option>
+				<option value="biotechnology">Biotecnología</option>
+				<option value="wholesale_trade">Comercio</option>
+				<option value="health_care">Salud</option>
+				<option value="information_media_internet">Informática / media / internet</option>
+				<option value="public_administration">Administración pública</option>
+				<option value="real_estate">Bienes raíces </option>
+				<option value="transportation">Transporte</option>
 				<option value="retail">Retail</option>
-				<option value="manufacture">Manufacture</option>
-				<option value="auto_repair">Auto repair</option>
-				<option value="education">Education</option>
-				<option value="utilities">Utilities</option>
-				<option value="professions_scientific_technical">Professional, Scientific and Technical Services</option>
-				<option value="management">Management of Companies and Enterprises</option>
-				<option value="administrative_support">Administrative Support, Waste Management and Remediation Services</option>
-				<option value="other">other (please specify below)</option>
+				<option value="manufacture">Manufactura</option>
+				<option value="auto_repair">Reparación de autos</option>
+				<option value="education">Educación</option>
+				<option value="utilities">Servicios profesionales</option>
+				<option value="professions_scientific_technical">Servicios científicos y técnicos</option>
+				<option value="management">Administración de empresas</option>
+				<option value="administrative_support">Soporte administrativo</option>
+				<option value="other">Otra</option>
 			</select>
 		</div>
 	</div>
@@ -155,7 +155,7 @@
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="pride_in">Breve historia del negocio *</label>
 		<div class="col-sm-8">
-			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="450"></textarea>
+			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="400"></textarea>
 		</div>
 	</div>
 
@@ -194,18 +194,18 @@
 		<div class="col-sm-8">
 			<select id="desafio" name="desafio" required="true" class="form-control">
 				<option value="">Selecciona uno...</option>
-				<option value="relocate_business">relocate a business</option>
-				<option value="hire_interns">hire interns</option>
-				<option value="training_employees">training employees</option>
-				<option value="buy_equipment">buy equipment</option>
-				<option value="accessing_capital">accesing capital</option>
-				<option value="open_location">open a new location</option>
-				<option value="finding_customers">finding customers</option>
-				<option value="finding_people">finding qualified people</option>
-				<option value="taxes_regulations">taxes and regulations</option>
-				<option value="cost_of_rent">cost of rent</option>
-				<option value="brand_awareness">achieving brand awareness</option>
-				<option value="other">other</option>
+				<option value="relocate_business">Reubicar un negocio</option>
+				<option value="hire_interns">Contratar pasantes</option>
+				<option value="training_employees">Entrenar empleados</option>
+				<option value="buy_equipment">Comprar equipamiento</option>
+				<option value="accessing_capital">Acceder a capital</option>
+				<option value="open_location">Abrir un nuevo local</option>
+				<option value="finding_customers">Encontrar clientes</option>
+				<option value="finding_people">Encontrar empleados calificados</option>
+				<option value="taxes_regulations">Impuestos y regulaciones</option>
+				<option value="cost_of_rent">Costo del alquiler</option>
+				<option value="brand_awareness">Exportar la marca</option>
+				<option value="other">Otro</option>
 			</select>
 		</div>
 	</div>
