--- a/templates/subir.html
+++ b/templates/subir.html
@@ -117,30 +117,30 @@
 		<div class="col-sm-8">
 			<select id="industry" name="industry" required="true" class="form-control">
 				<option value="">Selecciona uno...</option>
-				<option value="agriculture">Agricultura</option>
-				<option value="tourism">Turismo</option>
-				<option value="finance_insurance">Finanzas</option>
-				<option value="accomodation">Hospedaje</option>
-				<option value="food_drink">Comida & Bebida</option>
-				<option value="art_entertainment">Arte y entretenimiento</option>
-				<option value="construction">Construcción</option>
-				<option value="pharmaceuticals">Farmaceútica</option>
-				<option value="biotechnology">Biotecnología</option>
-				<option value="wholesale_trade">Comercio</option>
-				<option value="health_care">Salud</option>
-				<option value="information_media_internet">Informática / media / internet</option>
-				<option value="public_administration">Administración pública</option>
-				<option value="real_estate">Bienes raíces </option>
-				<option value="transportation">Transporte</option>
-				<option value="retail">Retail</option>
-				<option value="manufacture">Manufactura</option>
-				<option value="auto_repair">Reparación de autos</option>
-				<option value="education">Educación</option>
-				<option value="utilities">Servicios profesionales</option>
-				<option value="professions_scientific_technical">Servicios científicos y técnicos</option>
-				<option value="management">Administración de empresas</option>
-				<option value="administrative_support">Soporte administrativo</option>
-				<option value="other">Otra</option>
+				<option value="Agricultura">Agricultura</option>
+				<option value="Turismo">Turismo</option>
+				<option value="Finanzas">Finanzas</option>
+				<option value="Hospedaje">Hospedaje</option>
+				<option value="Comida & Bebida">Comida & Bebida</option>
+				<option value="Arte y entretenimiento">Arte y entretenimiento</option>
+				<option value="Construcción">Construcción</option>
+				<option value="Farmaceútica">Farmaceútica</option>
+				<option value="Biotecnología">Biotecnología</option>
+				<option value="Comercio">Comercio</option>
+				<option value="Salud">Salud</option>
+				<option value="nformática / media / internet">Informática / media / internet</option>
+				<option value="Administración pública">Administración pública</option>
+				<option value="Bienes raíces">Bienes raíces</option>
+				<option value="Transporte">Transporte</option>
+				<option value="Retail">Retail</option>
+				<option value="Manufactura">Manufactura</option>
+				<option value="Reparación de autos">Reparación de autos</option>
+				<option value="Educación">Educación</option>
+				<option value="Servicios profesionales">Servicios profesionales</option>
+				<option value="Servicios científicos y técnicos">Servicios científicos y técnicos</option>
+				<option value="Administración de empresas">Administración de empresas</option>
+				<option value="Soporte administrativo">Soporte administrativo</option>
+				<option value="Otra">Otra</option>
 			</select>
 		</div>
 	</div>
@@ -194,17 +194,17 @@
 		<div class="col-sm-8">
 			<select id="desafio" name="desafio" required="true" class="form-control">
 				<option value="">Selecciona uno...</option>
-				<option value="relocate_business">Reubicar un negocio</option>
-				<option value="hire_interns">Contratar pasantes</option>
-				<option value="training_employees">Entrenar empleados</option>
-				<option value="buy_equipment">Comprar equipamiento</option>
-				<option value="accessing_capital">Acceder a capital</option>
-				<option value="open_location">Abrir un nuevo local</option>
-				<option value="finding_customers">Encontrar clientes</option>
-				<option value="finding_people">Encontrar empleados calificados</option>
-				<option value="taxes_regulations">Impuestos y regulaciones</option>
-				<option value="cost_of_rent">Costo del alquiler</option>
-				<option value="brand_awareness">Exportar la marca</option>
+				<option value="Reubicar un negocio">Reubicar un negocio</option>
+				<option value="Contratar pasantes">Contratar pasantes</option>
+				<option value="Entrenar empleados">Entrenar empleados</option>
+				<option value="Comprar equipamiento">Comprar equipamiento</option>
+				<option value="Acceder a capital">Acceder a capital</option>
+				<option value="Abrir un nuevo local">Abrir un nuevo local</option>
+				<option value="Encontrar clientes">Encontrar clientes</option>
+				<option value="Encontrar empleados calificados">Encontrar empleados calificados</option>
+				<option value="Impuestos y regulaciones">Impuestos y regulaciones</option>
+				<option value="Costo del alquiler">Costo del alquiler</option>
+				<option value="Exportar la marca">Exportar la marca</option>
 				<option value="other">Otro</option>
 			</select>
 		</div>
