--- a/templates/subir.html
+++ b/templates/subir.html
@@ -153,7 +153,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-4 control-label" for="pride_in">Breve historia del negocio *</label>
+		<label class="col-sm-4 control-label" for="pride_in">¿Cómo obtuviste tu primer peso?</label>
 		<div class="col-sm-8">
 			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="400"></textarea>
 		</div>
