--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -8,15 +8,15 @@
     
       <div class="col-lg-4">
         <h2>Conectate con pequeños empresarios como tu</h2>
-        <p>Comparte historias de éxito y desafíos y unete a una red de pequeños empresarios.</p>
+        <p>Comparte la historia de como obtuviste y que hiciste con tu primer peso.</p>
       </div>
       <div class="col-lg-4">
        	<h2>Aprende de tus pares</h2>
-        <p>Recibe consejos y apoya a los empresarios que persiguen los mismos objetivos o se encuentran ante los mismos retos.</p>
+        <p>Conectate y aprende de empresarios que persiguen los mismos objetivos o se encuentran ante los mismos retos.</p>
       </div>
       <div class="col-lg-4">
        	<h2>Promociona tu iniciativa</h2>
-        <p>Construye conexiones profesionales y descubre efectivas estrategias de negocios.</p>
+        <p>Construye conexiones profesionales y descubre diferentes estrategias de negocios.</p>
       </div>
      <div class="row"> 
      <div class="col-lg-12">    
