--- a/templates/subir.html
+++ b/templates/subir.html
@@ -5,87 +5,7 @@
 	<!-- any local css/styling should be put here -->
 {% endblock %}
 {% block content %}
-<!--
 
-<form role="form">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Tu Nombre</label>
-    <input type="text" class="form-control" id="inputname" placeholder="Entra tu nombre">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Tu email</label>
-    <input type="email" class="form-control" id="inputemail" placeholder="Entra tu email">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">El nombre del negocio</label>
-    <input type="text" class="form-control" id="inputbusinessname" placeholder="Entra el nombre del negocio">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Breve historia del negocio</label>
-    <input type="text" class="form-control" id="exampleinputstory" placeholder="Breve historia del negocio">
-  </div>
-    <div><select class="form-control">
-    <label for="exampleInputPassword1">Municipio</label>
-	  <option>1</option>
-	  <option>2</option>
-	  <option>3</option>
-	  <option>4</option>
-	  <option>5</option>
-   </select></div>
-    <select class="form-control">
-    <label for="exampleInputPassword1">Desafíos</label>
-	  <option>1</option>
-	  <option>2</option>
-	  <option>3</option>
-	  <option>4</option>
-	  <option>5</option>
-   </select>
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Meta 1</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Meta 2</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Meta 3</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div>
-	<select class="form-control">
-	 <label for="exampleInputPassword1">Industria</label>
-	  <option>1</option>
-	  <option>2</option>
-	  <option>3</option>
-	  <option>4</option>
-	  <option>5</option>
-	</select>
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Facebook</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Twitter</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Website</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputFile">Sube una foto</label>
-    <input type="file" id="exampleInputFile">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Enlace a video</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
--->
 <br/>
 <div class="container"><div class="row"><div class="col-md-4 col-md-offset-4"><div class="row">
 
@@ -153,7 +73,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-4 control-label" for="pride_in">¿Cómo obtuviste tu primer peso?</label>
+		<label class="col-sm-4 control-label" for="pride_in">Cuenta la historia de tu primer cliente</label>
 		<div class="col-sm-8">
 			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="400"></textarea>
 		</div>
