Remove span from video fb link.

--- a/templates/explora.html
+++ b/templates/explora.html
@@ -84,7 +84,7 @@
                 <li> <strong>Twitter: </strong> <span class="video-name">{{ video.twitter_url }} </span></li>  
               {% endif %}
               {% if video.facebook_url %}
-                <li> <strong>Facebook: </strong> <span class="video-name">{{ video.facebook_url }} </span></li>  
+                <li> <strong>Facebook: </strong> {{ video.facebook_url }}</li>  
               {% endif %}
               {% if video.website_url %}
                 <li> <strong>Website: </strong> <span class="video-name">{{ video.website_url }} </span></li>  
